--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VITE_API_URL = https://tebanbarber-gitpage-production.up.railway.app
+VITE_API_URL = https://tebanbarber-gitpage-production.up.railway.app/api
 
